--- a/logIn/logIn.html
+++ b/logIn/logIn.html
@@ -1,9 +1,9 @@
-<div id="logIn">
-    <form id="logInForm" action="">
-        <label for="userName">User name: </label><br>
-        <input type="text" name="userName" id="userName" size="15" ng-model="userName"><br>
-        <label for="password">Password: </label><br>
-        <input type="password" name="password" id="password" size="15" ng-model="password"><br>
-        <input type="submit" value="Log in" id="logInButton" ng-click="clickLogIn(userName,password)">
+<div id="logIn" class="text-center">
+    <form id="logInForm" class="form-signin">
+        <label for="userName" class="sr-only">User name: </label>
+        <input type="text" name="userName" id="userName" class="form-control" placeholder="User name" required autofocus ng-model="userName">
+        <label for="password" class="sr-only">Password: </label>
+        <input type="password" name="password" id="password" class="form-control" placeholder="Password" required ng-model="password"><br>
+        <input type="submit" value="Log in" class="btn btn-lg btn-primary btn-block" ng-click="clickLogIn(userName,password)">
     </form>
 </div>
